<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageEmpty"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageFront"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/frontprofile" />

        <ImageView
            android:id="@+id/imageSide"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/sideprofile" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/txtPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/passport"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassport"
                android:layout_marginLeft="15dp"
                android:text="@string/name"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txtName"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtPassport"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/txtName"
                android:hint="Name" />

            <TextView
                android:id="@+id/txtSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_marginLeft="15dp"
                android:text="@string/surname"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/editTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txtSurname"
                android:layout_below="@id/txtName"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/txtSurname"
                android:hint="Surname" />

            <EditText
                android:id="@+id/editTextNacionality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSurname"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorText"
                android:hint="@string/nationality" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/txtSurname"
                android:layout_height="wrap_content"
                android:text="@string/ue_citicen"
                android:textColor="@color/colorText" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>